Crash after profile import in [@ nsMsgAccountManager::Shutdown]
Categories
(MailNews Core :: Account Manager, defect)
Tracking
(thunderbird_esr102+ fixed)
People
(Reporter: wsmwk, Assigned: leftmostcat)
References
(Regression)
Details
(Keywords: crash, regression, reproducible)
Crash Data
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
rjl
:
approval-comm-beta+
rjl
:
approval-comm-esr102+
|
Details | Review |
Crash happened immediately after import of a simple two account Thunderbird profile into a new, empty profile. I clicked to finish the process and expected Thunderbird to restart, but it crashed - I assume on shutdown.
On startup (after submitting the crash report) the import looks like it was successful - everything seems to be there from the imported profile.
Crash report: https://crash-stats.mozilla.org/report/index/204df22e-f708-4c81-9742-10b2a0220624
Reason: EXCEPTION_ACCESS_VIOLATION_READ
Top 10 frames of crashing thread:
0 xul.dll nsMsgAccountManager::Shutdown mailnews/base/src/nsMsgAccountManager.cpp:196
1 xul.dll nsMsgAccountManager::Observe mailnews/base/src/nsMsgAccountManager.cpp:246
2 xul.dll nsObserverList::NotifyObservers xpcom/ds/nsObserverList.cpp:70
3 xul.dll nsObserverService::NotifyObservers xpcom/ds/nsObserverService.cpp:291
4 xul.dll static mozilla::AppShutdown::AdvanceShutdownPhaseInternal xpcom/base/AppShutdown.cpp:372
5 xul.dll nsXREDirProvider::DoShutdown toolkit/xre/nsXREDirProvider.cpp:985
6 xul.dll ScopedXPCOMStartup::~ScopedXPCOMStartup toolkit/xre/nsAppRunner.cpp:2056
7 xul.dll mozilla::UniquePtr<ScopedXPCOMStartup, mozilla::DefaultDelete<ScopedXPCOMStartup> >::operator= mfbt/UniquePtr.h:275
8 xul.dll XREMain::XRE_main toolkit/xre/nsAppRunner.cpp:5971
9 xul.dll XRE_main toolkit/xre/nsAppRunner.cpp:6006
Comment 1•3 years ago
|
||
I had that crash testing Import on Fedora 35
https://crash-stats.mozilla.org/report/index/6e52446b-8aea-4ed9-bd6f-016b10220624
| Reporter | ||
Comment 2•3 years ago
|
||
Simple STR: create a new profile, cancel account creation, shutdown, crash
| Reporter | ||
Updated•3 years ago
|
Comment 3•3 years ago
|
||
| Assignee | ||
Comment 4•3 years ago
|
||
Updated•3 years ago
|
Updated•3 years ago
|
| Assignee | ||
Updated•3 years ago
|
Pushed by alessandro@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/4f78bd01de3e
prevent crash during account manager shutdown if folder cache isn't initialized. r=aleca
Updated•3 years ago
|
Comment 6•3 years ago
|
||
Margin this for ESR tracking since it looks like the patch that caused this crash will need to be uplifted to ESR.
| Reporter | ||
Updated•3 years ago
|
Comment 7•3 years ago
|
||
Comment on attachment 9282877 [details]
Bug 1776451 - prevent crash during account manager shutdown if folder cache isn't initialized. r=aleca
[Approval Request Comment]
Regression caused by (bug #): 1774072
User impact if declined: Crash after running import
Testing completed (on c-c, etc.):
Risk to taking this patch (and alternatives if risky):
[Triage Comment]
Approved for 102 and 103beta
Comment 8•3 years ago
|
||
Already on beta since it landed on 103.
Comment 9•3 years ago
|
||
| bugherder uplift | ||
Thunderbird 102.0.1:
https://hg.mozilla.org/releases/comm-esr102/rev/ab3aebdeba5c
Description
•