Bug 1776451 - prevent crash during account manager shutdown if folder cache isn't initialized. r=aleca

Differential Revision: https://phabricator.services.mozilla.com/D150298

--HG--
extra : moz-landing-system : lando